k8s/jurilib-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: jurilib
  labels:
    app: jurilib
spec:
  ports:
    - port: 3000
  selector:
    app: jurilib
    tier: app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jurilib
  labels:
    app: jurilib
spec:
  selector:
    matchLabels:
      app: jurilib
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jurilib
        tier: app
    spec:
      containers:
      - image: registry.bht-berlin.de/hdolzycka/cluster/jurilib:v6
        name: jurilib
        ports:
        - containerPort: 3000
          name: jurilib
        volumeMounts:
        - name: jurilib-persistent-storage
          mountPath: /data # TODO: Change this to the correct path if needed
      volumes:
      - name: jurilib-persistent-storage
        persistentVolumeClaim:
          claimName: jurilib-pv-claim
      imagePullSecrets:
      - name: private-registry-auth
